Update albums page, resolves #10

--- a/albums.html
+++ b/albums.html
@@ -50,118 +50,250 @@
         <h1 class="heading text-center">Hi, This is Missio</h1>
         <h2 class="sub-heading2 text-center">Wedding, Fashion, Event Photographer</h2>
         <div class="space50"></div>
-        <div class="tiles grid">
-          <div class="items row isotope boxed grid-view text-center">
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post.html"><img src="style/images/art/g1.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Families</h4>
+        <div class="tiles">
+          <div class="row isotope grid boxed list-view">
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g1.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Families</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post2.html"><img src="style/images/art/g2.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Weddings</h4>
+            <!-- /.item -->
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g2.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Weddings</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post3.html"><img src="style/images/art/g3.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Couples</h4>
+            <!-- /.item -->
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g3.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Couples</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post4.html"><img src="style/images/art/g4.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Fashion</h4>
+            <!-- /.item -->
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g4.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Fashion</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post.html"><img src="style/images/art/g5.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Events</h4>
+            <!-- /.item -->
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g5.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Events</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post2.html"><img src="style/images/art/g6.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Portraits</h4>
+            <!-- /.item -->
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g6.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Portraits</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post3.html"><img src="style/images/art/g7.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Children</h4>
+            <!-- /.item -->
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g7.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Children</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post4.html"><img src="style/images/art/g8.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Food</h4>
+            <!-- /.item -->
+            <div class="item grid-sizer col-lg-6">
+              <div class="bg-white shadow rounded">
+                <div class="image-block-wrapper">
+                  <div class="image-block col-lg-6">
+                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g8.jpg"></div>
+                  </div>
+                  <!--/.image-block -->
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 offset-lg-6">
+                        <div class="box d-flex">
+                          <div class="align-self-center">
+                            <h4 class="mb-15">Food</h4>
+                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                          </div>
+                        </div>
+                        <!-- /.box -->
+                      </div>
+                      <!--/column -->
+                    </div>
+                    <!--/.row -->
+                  </div>
+                  <!--/.container-fluid -->
+                </div>
+                <!--/.image-block-wrapper -->
               </div>
-              <!-- /.box -->
+              <!-- /.bg -->
             </div>
-            <!--/.item -->
-            <div class="item grid-sizer col-md-6 col-lg-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main polaroid overlay overlay1"><a href="gallery-post.html"><img src="style/images/art/g9.jpg" alt="" /></a>
-                  <figcaption>
-                    <h5 class="text-uppercase from-top mb-0">See Gallery</h5>
-                  </figcaption>
-                </figure>
-                <h4 class="text-uppercase mb-0">Sports</h4>
-              </div>
-              <!-- /.box -->
-            </div>
-            <!--/.item -->
+            <!-- /.item -->
           </div>
-          <!--/.row -->
+          <!-- /.row -->
         </div>
         <!-- /.tiles -->
       </div>
