--- a/contact.html
+++ b/contact.html
@@ -50,16 +50,12 @@
         <div class="row"><img src="style/images/contact.png" class="mx-auto"></div>
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
-            <p class="text-center">Nullam quis risus eget urna mollis ornare vel eu leo. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat.</p>
+            <p class="text-center">Whether you have questions about prices, packages, or anything else, I am ready to answer all your questions</p>
             <div class="space20"></div>
-            <div class="row text-center">
-              <div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-camping_map"></i></span>
-                <p>Moon Street Light Avenue<br> 14/05 Jupiter, JP 80630</p>
-              </div>
-              <!--/column -->
-              <div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-phone_phone-ringing"></i></span>
+            <div class="row text-center mx-auto">
+              <!--<div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-phone_phone-ringing"></i></span>
                 <p>00 (123) 456 78 90<br> 00 (987) 654 32 10 </p>
-              </div>
+              </div>-->
               <!--/column -->
               <div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-mail_mail-2"></i></span>
                 <p><a class="nocolor" href="mailto:#">manager@email.com</a><br>
@@ -86,14 +82,7 @@
                     <!--/.form-group -->
                   </div>
                   <!--/column -->
-                  <div class="col-md-6 pr-10">
-                    <div class="form-group">
-                      <input type="tel" class="form-control" name="tel" placeholder="Phone">
-                    </div>
-                    <!--/.form-group -->
-                  </div>
-                  <!--/column -->
-                  <div class="col-md-6 pl-10">
+                  <div class="col-12 pl-10">
                     <div class="form-group">
                       <input type="text" class="form-control" name="subject" placeholder="Subject">
                     </div>
