Center mail icon

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                 <p>00 (123) 456 78 90<br> 00 (987) 654 32 10 </p>
               </div>-->
               <!--/column -->
-              <div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-mail_mail-2"></i></span>
+              <div class="col-md-4 mx-auto"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-mail_mail-2"></i></span>
                 <p><a class="nocolor" href="mailto:#">manager@email.com</a><br>
                   <a class="nocolor" href="mailto:#">asistant@email.com</a></p>
               </div>
