Integrate form spree and work on albums

--- a/albums.html
+++ b/albums.html
@@ -55,7 +55,7 @@
               <div class="bg-white shadow rounded">
                 <div class="image-block-wrapper">
                   <div class="image-block col-lg-6">
-                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g1.jpg"></div>
+                    <div class="image-block-bg bg-image" data-image-src="style/images/Graduation/Cockrell_052219_22.jpg"></div>
                   </div>
                   <!--/.image-block -->
                   <div class="container-fluid">
@@ -63,8 +63,8 @@
                       <div class="col-lg-6 offset-lg-6">
                         <div class="box d-flex">
                           <div class="align-self-center">
-                            <h4 class="mb-15">Families</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <h4 class="mb-15">Graduation</h4>
+                            <p>Capture your success through the memory lens.</p>
                             <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
@@ -85,7 +85,7 @@
               <div class="bg-white shadow rounded">
                 <div class="image-block-wrapper">
                   <div class="image-block col-lg-6">
-                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g2.jpg"></div>
+                    <div class="image-block-bg bg-image" data-image-src="style/images/Family/G_004.jpg"></div>
                   </div>
                   <!--/.image-block -->
                   <div class="container-fluid">
@@ -93,8 +93,8 @@
                       <div class="col-lg-6 offset-lg-6">
                         <div class="box d-flex">
                           <div class="align-self-center">
-                            <h4 class="mb-15">Weddings</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <h4 class="mb-15">Families</h4>
+                            <p>Family is everything and photographs are forever.</p>
                             <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
@@ -115,7 +115,7 @@
               <div class="bg-white shadow rounded">
                 <div class="image-block-wrapper">
                   <div class="image-block col-lg-6">
-                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g3.jpg"></div>
+                    <div class="image-block-bg bg-image" data-image-src="style/images/couples/DSC_0373.jpg"></div>
                   </div>
                   <!--/.image-block -->
                   <div class="container-fluid">
@@ -124,7 +124,7 @@
                         <div class="box d-flex">
                           <div class="align-self-center">
                             <h4 class="mb-15">Couples</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <p>Lucky I'm in love with my best friend.</p>
                             <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
@@ -145,7 +145,7 @@
               <div class="bg-white shadow rounded">
                 <div class="image-block-wrapper">
                   <div class="image-block col-lg-6">
-                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g4.jpg"></div>
+                    <div class="image-block-bg bg-image" data-image-src="style/images/Portraits/Omogun_06012019_03.jpg"></div>
                   </div>
                   <!--/.image-block -->
                   <div class="container-fluid">
@@ -153,8 +153,8 @@
                       <div class="col-lg-6 offset-lg-6">
                         <div class="box d-flex">
                           <div class="align-self-center">
-                            <h4 class="mb-15">Fashion</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <h4 class="mb-15">Portraits</h4>
+                            <p>Let me capture your true self.</p>
                             <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
@@ -175,7 +175,7 @@
               <div class="bg-white shadow rounded">
                 <div class="image-block-wrapper">
                   <div class="image-block col-lg-6">
-                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g5.jpg"></div>
+                    <div class="image-block-bg bg-image" data-image-src="style/images/pets/DSC_7015-2.jpg"></div>
                   </div>
                   <!--/.image-block -->
                   <div class="container-fluid">
@@ -183,8 +183,8 @@
                       <div class="col-lg-6 offset-lg-6">
                         <div class="box d-flex">
                           <div class="align-self-center">
-                            <h4 class="mb-15">Events</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <h4 class="mb-15">Pets</h4>
+                            <p>Happiness is cuddling next to you.</p>
                             <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
@@ -205,7 +205,7 @@
               <div class="bg-white shadow rounded">
                 <div class="image-block-wrapper">
                   <div class="image-block col-lg-6">
-                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g6.jpg"></div>
+                    <div class="image-block-bg bg-image" data-image-src="style/images/food/DSC_4586.jpg"></div>
                   </div>
                   <!--/.image-block -->
                   <div class="container-fluid">
@@ -213,8 +213,8 @@
                       <div class="col-lg-6 offset-lg-6">
                         <div class="box d-flex">
                           <div class="align-self-center">
-                            <h4 class="mb-15">Portraits</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <h4 class="mb-15">Food</h4>
+                            <p>Photographing the ingredients of life.</p>
                             <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
@@ -235,7 +235,7 @@
               <div class="bg-white shadow rounded">
                 <div class="image-block-wrapper">
                   <div class="image-block col-lg-6">
-                    <div class="image-block-bg bg-image" data-image-src="style/images/art/g7.jpg"></div>
+                    <div class="image-block-bg bg-image" data-image-src="style/images/lifestyle/DSC_1448.jpg"></div>
                   </div>
                   <!--/.image-block -->
                   <div class="container-fluid">
@@ -243,8 +243,8 @@
                       <div class="col-lg-6 offset-lg-6">
                         <div class="box d-flex">
                           <div class="align-self-center">
-                            <h4 class="mb-15">Children</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <h4 class="mb-15">LifeStyle</h4>
+                            <p>Capturing my favorite moments.</p>
                             <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
@@ -273,8 +273,8 @@
                       <div class="col-lg-6 offset-lg-6">
                         <div class="box d-flex">
                           <div class="align-self-center">
-                            <h4 class="mb-15">Food</h4>
-                            <p>Etiam porta sem malesuada magna mollis euismod.</p>
+                            <h4 class="mb-15">Projects</h4>
+                            <p>My creative photo file.</p>
                             <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
                           </div>
                         </div>
