--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <!--/.row -->
             <div class="space30"></div>
             <div class="form-container">
-              <form action="contact/vanilla-form.php" method="post" class="vanilla vanilla-form" novalidate>
+              <form action="https://formspree.io/mvowzwrl" method="post">
                 <div class="row text-center">
                   <div class="col-md-6 pr-10">
                     <div class="form-group">
