Updated shop page

--- a/shop.html
+++ b/shop.html
@@ -54,8 +54,8 @@
             <div class="item col-md-4">
               <div class="box bg-white shadow p-30">
                 <figure class="main mb-30"><img src="style/images/art/si1.jpg" alt="" /></figure>
-                <h4>Editorial Photography</h4>
-                <p class="mb-10">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <h4>Photography</h4>
+                <p class="mb-10">Find out the various categories of photography I service.</p>
               </div>
               <!-- /.box -->
             </div>
@@ -63,8 +63,8 @@
             <div class="item col-md-4">
               <div class="box bg-white shadow p-30">
                 <figure class="main mb-30"><img src="style/images/art/si2.jpg" alt="" /></figure>
-                <h4>Product Photography</h4>
-                <p class="mb-10">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <h4>Print Photography</h4>
+                <p class="mb-10">Exclusive site to print unique photos and client photos with the given password for client protection.</p>
               </div>
               <!-- /.box -->
             </div>
@@ -72,8 +72,8 @@
             <div class="item col-md-4">
               <div class="box bg-white shadow p-30">
                 <figure class="main mb-30"><img src="style/images/art/si3.jpg" alt="" /></figure>
-                <h4>Food & Drink Photography</h4>
-                <p class="mb-10">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <h4>Photos, stickers and more</h4>
+                <p class="mb-10">My redbubble store provides stickers and other items from my art portfolio.</p>
               </div>
               <!-- /.box -->
             </div>
