Add redbubble shop link

--- a/shop.html
+++ b/shop.html
@@ -70,12 +70,14 @@
             </div>
             <!--/.item -->
             <div class="item col-md-4">
-              <div class="box bg-white shadow p-30">
-                <figure class="main mb-30"><img src="style/images/art/si3.jpg" alt="" /></figure>
-                <h4>Photos, stickers and more</h4>
-                <p class="mb-10">My redbubble store provides stickers and other items from my art portfolio.</p>
-              </div>
-              <!-- /.box -->
+              <a href="https://www.redbubble.com/people/PereiraATXFoto/shop?asc=u">
+                <div class="box bg-white shadow p-30">
+                  <figure class="main mb-30"><img src="style/images/art/si3.jpg" alt="" /></figure>
+                  <h4>Photos, stickers and more</h4>
+                  <p class="mb-10">My redbubble store provides stickers and other items from my art portfolio.</p>
+                </div>
+                <!-- /.box -->
+              </a>
             </div>
             <!--/.item -->
           </div>
