--- a/shop.html
+++ b/shop.html
@@ -61,12 +61,14 @@
             </div>
             <!--/.item -->
             <div class="item col-md-4">
+              <a href="https://pereiraatxfoto.shootproof.com/">
               <div class="box bg-white shadow p-30">
                 <figure class="main mb-30"><img src="style/images/art/si2.jpg" alt="" /></figure>
                 <h4>Print Photography</h4>
                 <p class="mb-10">Exclusive site to print unique photos and client photos with the given password for client protection.</p>
               </div>
               <!-- /.box -->
+            </a>
             </div>
             <!--/.item -->
             <div class="item col-md-4">
