Update email on contact page

--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,7 @@
               </div>-->
               <!--/column -->
               <div class="col-md-4 mx-auto"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-mail_mail-2"></i></span>
-                <p><a class="nocolor" href="mailto:#">manager@email.com</a><br>
-                  <a class="nocolor" href="mailto:#">asistant@email.com</a></p>
+                <p><a class="nocolor" href="mailto:#">pereira.atxfoto@gmail.com</a><br>
               </div>
               <!--/column -->
             </div>
