Add links to shop

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="space60"></div>
         <div class="row">
           <div class="col-md-6 text-right pr-35 pr-sm-15">
-            <figure class="overlay caption light rounded mb-30"><a href="#"> <img src="style/images/graduation.jpg" alt="" /></a>
+            <figure class="overlay caption light rounded mb-30"><a href="/services"> <img src="style/images/graduation.jpg" alt="" /></a>
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
                   <div class="caption-inner">
@@ -94,7 +94,7 @@
             <div class="space40"></div>
             <h2 class="section-title section-title-upper larger">What Services I Provide?</h2>
             <div class="space20"></div>
-            <figure class="overlay caption light rounded"><a href="#"> <img src="style/images/pets.jpg" alt="" /></a>
+            <figure class="overlay caption light rounded"><a href="/services"> <img src="style/images/pets.jpg" alt="" /></a>
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
                   <div class="caption-inner">
