--- a/services.html
+++ b/services.html
@@ -46,52 +46,32 @@
       </div>
     </nav>
     <div class="wrapper bg-pastel-default">
-      <div class="container inner">
-        <div class="row"><img src="style/images/services.png" class="mx-auto"></div>
-        <div class="space10"></div>
-        <div class="tiles">
-          <div class="items row boxed grid-view text-center">
-            <div class="item col-md-4">
-              <a href="/services">
-                <div class="box bg-white shadow p-30">
-                  <figure class="main mb-30"><img src="style/images/art/si1.jpg" alt="" /></figure>
-                  <h4>Photography</h4>
-                  <p class="mb-10">Find out the various categories of photography I service.</p>
-                </div>
-                <!-- /.box -->
-              </a>
+        <div class="container pt-3">
+          <h2 class="section-title mb-40 text-center">Services</h2>
+          <div class="row">
+            <div class="col-md-4">
+              <ul class="unordered-list">
+                <li>Graduation Photography</li>
+                <li>Family Photograpy</li>
+                <li>Couple Photograpy</li>
+                <li>Portraits</li>
+                <li>Pet Photography</li>
+                <li>Food Photography</li>
+              </ul>
             </div>
-            <!--/.item -->
-            <div class="item col-md-4">
-              <a href="https://pereiraatxfoto.shootproof.com/">
-                <div class="box bg-white shadow p-30">
-                  <figure class="main mb-30"><img src="style/images/art/si2.jpg" alt="" /></figure>
-                  <h4>Print Photography</h4>
-                  <p class="mb-10">Exclusive site to print and download client photos with the given password for client protection.</p>
-                </div>
-                <!-- /.box -->
-              </a>
-            </div>
-            <!--/.item -->
-            <div class="item col-md-4">
-              <a href="https://www.redbubble.com/people/PereiraATXFoto/shop?asc=u">
-                <div class="box bg-white shadow p-30">
-                  <figure class="main mb-30"><img src="style/images/art/si3.jpg" alt="" /></figure>
-                  <h4>Photos, stickers and more</h4>
-                  <p class="mb-10">My redbubble store provides stickers and other items from my art portfolio.</p>
-                </div>
-                <!-- /.box -->
-              </a>
-            </div>
-            <!--/.item -->
+            <!-- /column -->
           </div>
-          <!--/.row -->
+          <!-- /.row -->
+          <div class="row">
+            <div class="col-12">
+                <p>Outdoor Photography is provided at the moment. Once a studio is available, I will be providing and studio services. I do not provide wedding photography but will gladly recommend fellow wedding photographers.</p>
+            </div>
+          </div>
+          <!-- /.row -->
         </div>
-        <!--/.tiles -->
+        <!-- /.container -->
       </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.wrapper -->
+      <!-- /.wrapper -->
     <footer class="dark-wrapper inverse-text">
       <div class="container inner">
         <div class="row d-md-flex align-items-md-center">
