Add phone number to contact

--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,9 @@
             <p class="text-center">Whether you have questions about prices, packages, or anything else, I am ready to answer all your questions</p>
             <div class="space20"></div>
             <div class="row text-center mx-auto">
-              <!--<div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-phone_phone-ringing"></i></span>
-                <p>00 (123) 456 78 90<br> 00 (987) 654 32 10 </p>
-              </div>-->
+              <div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-phone_phone-ringing"></i></span>
+                <p>(737) 232 0810<br></p>
+              </div>
               <!--/column -->
               <div class="col-md-4 mx-auto"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-mail_mail-2"></i></span>
                 <p><a class="nocolor" href="mailto:#">pereira.atxfoto@gmail.com</a><br>
