--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <div class="space20"></div>
             <div class="row text-center mx-auto">
               <div class="col-md-4"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-phone_phone-ringing"></i></span>
-                <p>(737) 232 0810<br></p>
+                <p>(737) 232 0810<br>Text or Call</p>
               </div>
               <!--/column -->
               <div class="col-md-4 mx-auto"> <span class="icon icon-color color-default fs-48 mb-10"><i class="si-mail_mail-2"></i></span>
