Updated index with photo, arrangement of services, and intro

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="wrapper light-wrapper">
       <div class="container inner">
         <div class="row">
-          <div class="col-md-6 text-right pr-35 pr-sm-15">
+          <div class="col-md-6 text-center pr-35 pr-sm-15 mx-auto">
             <h2 class="sub-heading">Welcome! I'm Barbara Rodriguez-Pereira, a photographer that specializes in Graduation and Pet Photography</h2>
           </div>
           <!-- /column -->
@@ -78,7 +78,12 @@
         <!-- /.row -->
         <div class="space60"></div>
         <div class="row">
-          <div class="col-md-6 text-right pr-35 pr-sm-15">
+          <div class="col-12">
+            <h2 class="section-title section-title-upper larger text-center">What Services I Provide?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 pr-35 pr-sm-15">
             <figure class="overlay caption light rounded mb-30"><a href="/services"> <img src="style/images/graduation.jpg" alt="" /></a>
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
@@ -91,9 +96,6 @@
           </div>
           <!-- /column -->
           <div class="col-md-6">
-            <div class="space40"></div>
-            <h2 class="section-title section-title-upper larger">What Services I Provide?</h2>
-            <div class="space20"></div>
             <figure class="overlay caption light rounded"><a href="/services"> <img src="style/images/pets.jpg" alt="" /></a>
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
@@ -121,7 +123,7 @@
           <!-- /column -->
           <div class="space30 d-block d-lg-none d-xl-none"></div>
           <div class="col-lg-6">
-            <figure class="rounded"><img src="style/images/art/about8.jpg" alt=""></figure>
+            <figure class="rounded"><img src="style/images/AboutMe.jpg" alt=""></figure>
           </div>
           <!-- /column -->
         </div>
