--- a/albums.html
+++ b/albums.html
@@ -48,6 +48,9 @@
     <div class="wrapper bg-pastel-default">
       <div class="container inner pt-70">
         <div class="row"><img src="style/images/albums.png" class="mx-auto"></div>
+        <div class="row text-center my-3">
+          <h1 class="col-12 mx-auto">Under Construction</h1>
+        </div>
         <div class="space50"></div>
         <div class="tiles">
           <div class="row isotope grid boxed list-view">
@@ -65,7 +68,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">Graduation</h4>
                             <p>Capture your success through the memory lens.</p>
-                            <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
@@ -95,7 +98,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">Families</h4>
                             <p>Family is everything and photographs are forever.</p>
-                            <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
@@ -125,7 +128,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">Couples</h4>
                             <p>Lucky I'm in love with my best friend.</p>
-                            <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
@@ -155,7 +158,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">Portraits</h4>
                             <p>Let me capture your true self.</p>
-                            <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
@@ -185,7 +188,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">Pets</h4>
                             <p>Happiness is cuddling next to you.</p>
-                            <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
@@ -215,7 +218,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">Food</h4>
                             <p>Photographing the ingredients of life.</p>
-                            <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post2.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
@@ -245,7 +248,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">LifeStyle</h4>
                             <p>Capturing my favorite moments.</p>
-                            <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post3.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
@@ -275,7 +278,7 @@
                           <div class="align-self-center">
                             <h4 class="mb-15">Projects</h4>
                             <p>My creative photo file.</p>
-                            <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div>
+                            <!-- <div class="arrow-link"><a href="gallery-post4.html" class="text-muted">See Gallery <i class="mi-arrow-right"></i></a> </div> -->
                           </div>
                         </div>
                         <!-- /.box -->
