Make services images same height

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 pr-35 pr-sm-15">
-            <figure class="overlay caption light rounded mb-30"><a href="/services"> <img src="style/images/graduation.jpg" alt="" /></a>
+            <figure class="overlay caption light rounded mb-30"><a href="/services"> <img style="height: 700px" src="style/images/graduation.jpg" alt="" /></a>
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
                   <div class="caption-inner">
@@ -96,7 +96,7 @@
           </div>
           <!-- /column -->
           <div class="col-md-6">
-            <figure class="overlay caption light rounded"><a href="/services"> <img src="style/images/pets.jpg" alt="" /></a>
+            <figure class="overlay caption light rounded"><a href="/services"> <img style="height: 700px" src="style/images/pets.jpg" alt="" /></a>
               <figcaption class="d-flex">
                 <div class="align-self-center mx-auto">
                   <div class="caption-inner">
